--- a/src/main/resources/lang/ja_JP.yml
+++ b/src/main/resources/lang/ja_JP.yml
@@ -50,3 +50,5 @@ error:
   noHaveMoney: "§4§lエラー：引き出せる預金がありません。"
   ##プレイヤーから実行
   pleasePlayer: "§4§lエラー: プレイヤーから実行してください。"
+  ##オーバーフロー
+  overflow: "§4§lエラー: 入金金額が多すぎです。一度に入金する額を減らしてください。"
